# yolov8_onnxruntime_cpp

./: .gitignore  CMakeLists.txt  inference.cpp  inference.h  main.cpp  main_cls.cpp  main_det.cpp
configs/: classnames.yaml  coco.yaml  jke_zhuanzi.yaml
scripts/: build.sh  run.sh  start.sh
